--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "puppeteer": "^1.11.0",
-    "puppeteer-core": "^1.11.0"
+    "puppeteer-core": "^1.11.0",
+    "chai": "^4.2.0"
   }
 }
